# apms-firmware

./: .gitignore  CMakeLists.txt  README.md  plot_log.py  plot_stack.py  sdkconfig  sdkconfig.defaults
components/bmp180/include/: bmp180.h
components/dht/: component.mk
components/dht/include/: dht.h
components/pms/: pms.c
components/pms/include/: pms.h
components/sensors-common/include/: bytes.h  itc_sensor.h  mdbg.h  ticks.h
doc/: .gitignore  proposal.odt  report.bib  report.tex
firmware/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.defaults
firmware/components/bmp180/: bmp180.c
firmware/components/dht/: dht.c
firmware/components/dht/include/: dht.h
firmware/components/itc/include/: itc_sensor.h
firmware/components/pms/: component.mk  pms.c
firmware/components/pms/include/: pms.h
firmware/components/sensors-common/include/: itc_sensor.h  ticks.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/: Kconfig.projbuild  component.mk  main.c
